README: add contributors section for licensing / legal reasons

--- a/README
+++ b/README
@@ -207,6 +207,10 @@ way, to sean@conman.org.
 
 Thank you.
 
+Other contributors include, but are not limited to:
+
+Matthew Hall <mhall@mhcomputing.net>
+
 [1]	http://c-ares.haxx.se/
 	http://www.corpit.ru/mjt/udns.html
 	http://www.chiark.greenend.org.uk/~ian/adns/
